<resources>
    <string name="app_name">유후</string>
    <string name="noti_title">익명메세지 \'유후\'</string>
    <string name="alert_btn_neg">아니요</string>
    <string name="alert_btn_pos">예</string>
    <string name="alert_btn_agree">동의</string>
    <string name="alert_btn_ok">확인</string>
    <string name="alert_msg_register">본인 등록을 해야 알림을 받고\n메세지를 보낼 수 있어</string>
    <string name="alert_msg_confirm">너 누구야 본인 인증을 해야\n너한테 온 유후를 보여줄 수 있어\n남들이 못보게 하기 위한 거니까 이해해줘</string>
    <string name="alert_msg_send_complete">유후 전송 완료!</string>
    <string name="alert_msg_agree">디바이스에 등록된 본인의\n휴대전화 번호 조회에 동의합니다</string>
    <string name="alert_msg_app_close">앱 종료할거야?\n속 시원해?</string>
    <string name="alert_msg_to_whom">누구한테 보낼지는 정해야지!</string>
    <string name="alert_msg_to_emergency">바쁘신데 장난치는거 아니다!</string>
    <string name="alert_msg_no_message">뭐라고 보낼지 작성해야지!</string>
    <string name="select_msg_list_delete">내게 온 유후 삭제</string>
    <string name="select_msg_send_list_delete">내가 보낸 유후 삭제</string>
    <string name="select_logout">로그아웃</string>
    <string name="title_btn_my">MY</string>
    <string name="title_btn_home">유후 보내기</string>
    <string name="title_msg_list">내게 온 유후</string>
    <string name="title_send_msg_list">내가 보낸 유후</string>
    <string name="title_blocked_msg_list">차단 유후 관리</string>
    <string name="title_setting">유후 설정</string>
    <string name="home_btn_send">보내기</string>
    <string name="home_hint_phone">보낼 연락처</string>
    <string name="home_hint_message">메세지를 입력해주세요...</string>
    <string name="home_spinner_type_app_with_sms">익명 앱 메세지  +  익명 문자 메세지</string>
    <string name="home_spinner_type_app">익명 앱 메세지</string>
    <string name="next">다음</string>
    <string name="btn_close_guide">당장 시작하기</string>
    <string name="contents_msg_list_empty1">내게 온 유후가 없어요</string>
    <string name="contents_msg_list_empty2">내가 먼저 보내볼까?</string>
    <string name="contents_blocked_msg_list_empty1">아직</string>
    <string name="contents_blocked_msg_list_empty2">차단한 적이 없어요</string>
    <string name="contents_msg_send_list_empty1">너… 친구 없지ㅋ~</string>
    <string name="contents_msg_send_list_empty2">있으면 어서 유후를 보내보라고!</string>
    <string name="setting_push">푸쉬 알림 설정</string>
    <string name="setting_push_noti">새로 온 유후 메세지 알림</string>
    <string name="setting_push_sound">유후 소리 알림</string>
    <string name="setting_receive">수신 및 차단 설정</string>
    <string name="setting_receive_sms">친구가 보낸 문자 메세지 수신</string>
    <string name="setting_receive_sms_sub_off">문자 메세지는 받지 않습니다. 앱 메세지만 받습니다.</string>
    <string name="setting_receive_sms_sub_on">친구가 보낸 문자메세지와 앱메세지를 함께 받습니다.</string>
    <string name="setting_receive_blocked_list">차단 유후 관리</string>
    <string name="setting_service">유후 서비스 관리</string>
    <string name="deleted_message">지워진 메세지입니다.</string>
    <string name="network_error">네트워크 오류</string>
    <string name="before_under_1_minute">방금</string>
    <string name="before_under_1_hour">분 전</string>
    <string name="before_under_1_day">시간 전</string>
    <string name="yesterday">어제</string>
    <string name="cancel">취소</string>
    <string name="btn_delete_pre">삭제</string>
    <string name="select_all">모두 선택</string>
    <string name="deselect_all">모두 취소</string>
    <string name="btn_reply">답장하기</string>
    <string name="phone_no_reply">답장중...</string>
    <string name="toast_back_again">\'뒤로\'버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="copy">복사하기</string>
    <string name="delete">삭제하기</string>
    <string name="block">차단하기</string>
    <string name="delete_block">차단풀기</string>
    <string name="delete_question">선택하신 유후를 삭제하시겠습니까?</string>
    <string name="block_question">이 유후를 보낸 유저를 차단하시겠습니까?</string>
    <string name="loading">로딩중...</string>
    <string name="sending">메세지 전송중...</string>
    <string name="sending_sms">문자 전송중...</string>
    <string name="complete">완료</string>
    <string name="reciever">받는이 :</string>
    <string name="check_guide">다시 보지 않기</string>
    <string name="postfix_sms">\n\n익명메세지 &lt;유후&gt;\n앱링크:</string>
    <string name="splash_agree">서비스를 시작함으로써 유후 서비스이용약관과 개인정보처리방침에 동의하는 것으로 간주합니다.</string>
    <string name="service_use_agree">유후 서비스 이용약관</string>
    <string name="personnel_info_agree">유후 개인정보처리방침</string>
    <string name="service_use_agree_contets">유후 서비스 약관\n\n\n세상에 하고싶은 말은 많은데 말못해 답답한 여러분!\n진심으로 환영합니다 LOL\n\n‘유후’ 서비스를 이용해 주셔서 감사합니다. 본 서비스 ‘유후’는 여러분이 일상속에서 말못한 속마음을 비밀스럽게 전달하기 위한 모바일 메신저 서비스를 지원합니다. 지금부터 ‘유후’ 서비스 상에서 업로드, 다운로드 되거나 보여지는 정보, 문구, 그래픽, 사진 또는 기타 자료(이하 통칭하여 “콘텐츠”)에 접근하여 이용하는 모든 것에 대한 규율을 알려드리려 합니다. 여러분이 약관 내용에 동의하시지 못한다면 본 서비스를 사용하실 수 없습니다. 하지만 여러분은 지금부터 설명 드리는 약관에 동의하시고 구속된다는 전제하에 서비스를 마음껏 사용 하실 수 있습니다. 지금부터 여러분은 본 서비스에 액세스 하거나 이용함으로써, 유후 서비스 약관에 구속되는 것에 동의합니다.\n\n여러분은 스마트폰의 어플리케이션 스토어 등에서 유후 서비스를 다운받아 설치하여 이용할 수 있습니다. 또한 서비스를 마음껏 이용할 수 있도록 이에 필요한 소프트웨어의 개인적이고 전 세계적이며 양도불가능하고 비독점적인 무상의 라이선스를 여러분에게 제공합니다. 단, 유후가 여러분에게 유후 상표 및 로고를 사용할 권리를 부여하는 것은 아니라는 점은 잊지 말아주시기 바랍니다.\n\n유후는 더 나은 유후 서비스를 위하여 서비스에 필요한 소프트웨어의 업데이트 버전을 제공할 수 있습니다. 소프트웨어의 업데이트에는 중요한 기능의 추가 또는 불필요한 기능의 제거 등이 포함되어 있습니다. 여러분들도 유후 서비스를 즐겁게 이용할 수 있도록 꾸준히 업데이트를 하여 주시기 바랍니다.\n\n유후는 더 나은 서비스의 제공을 위하여 여러분에게 유후 서비스의 이용과 관련된 각종 고지, 관리 메시지 및 기타 광고를 비롯한 다양한 정보를 유후 서비스에 표시하거나 여러분의 연락처로 직접 발송할 수 있습니다. 유후 서비스 이용 중 시스템 오류 등 문제점을 발견하신다면 언제든지 유후 고객 센터로 알려주시기 바랍니다.\n\n여러분이 유후를 이용하는 과정에서 Wi-Fi 무선인터넷을 사용하지 않고, 가입하신 이동통신사의 무선인터넷에 연결하여 이용하는 경우 이동통신사로부터 여러분에게 별도의 데이터 통신요금이 부과되는 점을 유의하여 주시기 바랍니다. 유후 이용 과정에서 발생하는 데이터 통신요금은 여러분이 여러분의 비용과 책임 하에 이동통신사에 납부하셔야 합니다. 데이터 통신요금에 대한 자세한 안내는 여러분이 가입하신 이동통신사에 문의하시기 바랍니다.\n\n\n유후는 계정을 사용하지 않습니다.\n\n오직 여러분의 모바일에 등록된 연락처를 기반으로 수신 메시지를 전달 드립니다. 따라서 모바일을 변경 하시거나 연락처를 바꾸실 경우 앞서 수신하신 메시지를 보여드릴 수 없습니다. 유후는 메시지 수신자와 발신자의 보안을 최우선시 하며, 양 측을 모두 보호하기 위하여 위와 같은 정책을 펼 수 밖에 없는점 양해 부탁드립니다.\n\n\n이 점 만은 주의하여 주시기 바랍니다.\n\n여러분은 유후 서비스를 자유롭게 이용할 수 있으며, 여러분이 유후 서비스를 이용함으로써 여러분 내면의 진실된 이야기를 하시는 것은 유후의 보람입니다. 다만, 여러분은 유후 서비스를 잘못된 방법으로 이용할 수 없다는 점을 잊지 말아주셨으면 합니다.\n\n예를 들어, 여러분은 잘못된 방법으로 유후 서비스의 제공을 방해하거나 유후가 안내하는 방법 이외의 다른 방법을 사용하여 유후 서비스에 접근할 수 없습니다. 또한, 다른 유후 서비스 이용자의 정보를 무단으로 수집, 이용하거나 다른 사람들에게 제공하는 행위도, 유후 서비스를 영리 목적으로 이용하는 것도, 음란 정보나 저작권 침해 정보 등 공서양속 및 법령에 위반되는 내용의 정보 등을 발송하거나 게시하는 행위도 금지된다는 점을 이해하여 주시기 바랍니다. 그리고 유후의 동의 없이 유후 서비스 또는 이에 포함된 소프트웨어의 일부를 복사, 수정, 배포, 판매, 양도, 대여, 담보제공하거나 타인에게 그 이용을 허락하는 행위와 소프트웨어를 역설계하거나 소스 코드의 추출을 시도하는 등 유후 서비스를 복제, 분해 또는 모방하거나 기타 변형하는 행위도 당연히 금지됩니다. 또한 유후를 통하여 문자메시지가 발송 가능하며, 유후의 문자메시지 기능을 통하여 누군가에게 어떠한 것이든 ’광고’를 하실 경우정보통신만 관련 법률에 따라 ‘불법 스팸’으로 간주되고 이에 따른 처벌을 받을 수 있으며 본 서비스에 미치는 피해에 대한 모든 보상을 하셔야만 합니다.\n\n혹시라도 여러분이 관련 법령, 유후의 모든 약관 또는 정책을 준수하지 않는다면, 유후는 여러분의 부정행위를 조사하거나 여러분의 유후 서비스 이용을 잠시 또는 계속하여 중단할 수도 있습니다. 또한 회사는 법령에서 정하는 기간 동안 여러분이 서비스를 이용하기 위해 접속한 기록이 없는 경우 여러분이 등록한 전자우편, SMS 등 기타 유효한 수단으로 통지 후 여러분의 정보를 파기하거나 분리 보관할 수 있으며, 이로 인해 서비스 이용을 위한 필수적인 정보가 부족할 경우 이용계약이 해지될 수도 있습니다.\n\n\n여러분의 개인정보를 보호합니다.\n\n여러분 개인정보의 안전한 처리는 유후에게 있어 가장 중요한 일 중 하나입니다. 여러분의 개인정보는 유후 서비스의 원활한 제공을 위하여 여러분이 동의한 목적과 범위 내에서만 이용됩니다. 법령에 의하거나 여러분이 별도로 동의하지 아니하는 한 유후가 여러분의 개인정보를 제3자에게 제공하는 일은 결코 없으므로, 안심하셔도 좋습니다. 유후는 여러분의 개인정보를 안전하게 처리하기 위하여 기울이는 노력이나 기타 상세한 사항은 유후 개인정보 처리방침을 참고하여 주십시오.\n\n\n콘텐츠의 저작권도 보호합니다.\n\n유후는 여러분의 지적재산권을 존중합니다. 여러분은 사진, 글, 정보, 유후에 대한 의견이나 제안들을 유후 서비스를 통하여 게시하거나 전달할 수 있으며, 이러한 콘텐츠에 대한 지적재산권은 당연히 여러분이 계속하여 보유합니다.\n\n유후는 여러분의 콘텐츠가 유용한 정보를 포함하고 있으며, 많은 사람들이 여러분의 콘텐츠에 적법한 절차와 방법으로 접근하는 것이 매우 중요하다고 믿고 있습니다. 여러분이 유후 서비스에 콘텐츠를 게시하는 경우, 해당 콘텐츠는 유후 서비스에 노출될 수 있고, 이에 필요한 범위 내에서 사용, 저장, 복제, 수정, 공중송신, 전시, 배포 등의 방식으로 이용할 수 있도록 사용을 허락하는 전 세계적인 라이선스를 제공하게 됩니다.\n\n이 경우, 유후는 저작권법을 준수하며, 여러분은 언제든지 고객센터 또는 유후 서비스 내 관리기능이 제공되는 경우 해당 관리기능을 통해 콘텐츠에 대한 삭제, 비공개 등의 조치를 취할 수 있습니다. 다시 한 번 알려드리지만, 본 라이선스에서 여러분이 유후와 협력사에게 부여하는 권리는 유후 서비스를 운영, 개선, 홍보하고 새로운 유후 서비스를 개발하기 위한 범위 내에서 사용됩니다.\n\n일부 유후 서비스에서는 여러분이 제공한 콘텐츠에 접근하거나 이를 삭제하는 방법을 제공할 수 있습니다. 유후의 콘텐츠 사용에 대해 더 자세한 정보가 필요한 경우, 유후 개인정보 처리방침을 참고하시거나 서비스 담당팀 메일로 문의 주시기 바랍니다.\n\n유후는 여러분의 콘텐츠가 법령 및 유후 서비스 정책에 위반된다고 판단할 경우, 이를 삭제하거나 게시를 거부할 수 있습니다. 다만 유후가 모든 콘텐츠를 검토할 의무가 있는 것은 아닙니다. 누군가 여러분의 권리를 침해하였다면, 유후 고객센터를 통해 게시중단요청에 대한 도움을 받으실 수 있습니다.\n\n유후 서비스에서는 유후가 보유하지 않은 일부 콘텐츠가 표시될 수 있습니다. 그러한 콘텐츠에 대해서는 콘텐츠를 제공한 주체가 단독으로 모든 책임을 부담하게 됩니다. 여러분이 유후 서비스를 이용하더라도 다른 이용자의 콘텐츠에 대하여 어떠한 권리를 가지게 되는 것은 아닙니다. 여러분이 다른 이용자의 콘텐츠를 사용하기 위하여는 콘텐츠 소유자로부터 별도로 허락을 받아야 합니다.\n\n\n가끔은 중단될 수도 있습니다.\n\n유후는 유후 서비스를 365일, 24시간 쉬지 않고 제공하기 위하여 최선의 노력을 다합니다. 다만, 장비의 유지∙보수를 위한 정기 또는 임시 점검 또는 다른 상당한 이유로 유후 서비스의 제공이 일시 중단될 수 있으며, 이때에는 미리 서비스 제공화면에 공지하겠습니다. 만약, 유후로서도 예측할 수 없는 이유로 유후 서비스가 중단된 때에는 유후가 상황을 파악하는 즉시 통지하겠습니다.\n\n\n\n모든 것을 보증하는 것은 아닙니다.\n\n유후는 여러분이 마음껏 유후 서비스를 이용할 수 있도록 합리적인 수준의 주의를 기울여 유후 서비스를 제공합니다.\n\n유후는 법령상 허용되는 한도 내에서 유후 서비스와 관련하여 본 약관에 명시되지 않은 어떠한 구체적인 사항에 대한 약정이나 보증을 하지 않습니다. 예를 들어, 유후는 유후 서비스에 속한 콘텐츠, 서비스의 특정 기능, 서비스의 이용가능성에 대하여 어떠한 약정이나 보증을 하는 것이 아니며, 유후 서비스를 ‘있는 그대로’ 제공할 뿐입니다. 따라서 서비스에 점속하거나 서비스를 이용하는 여러분은 공격적이거나 외설적이거나 불쾌할 수 있는 타인의 자료에 노출될 수 있으며, 여러분은 이러한 콘텐츠에 노출될 수 있는 위험을 감수하시는데 동의 해야 합니다. 유후는 이러한 콘텐츠를 구별하여 받아볼 수 있도록 최선을 다하여 노력하겠지만 여러분이 발신*수신하는 콘텐츠에 대하여 발생하는 일에 책임을 지지 않습니다.\n\n유후의 잘못은 유후가 책임집니다.\n\n유후는 여러분이 유후 서비스를 이용함으로써 더 많은 즐거움과 혜택을 받기를 희망합니다. 만일 유후의 과실로 인하여 여러분이 손해를 입게 될 경우 유후는 법령에 따라 여러분의 손해를 배상하겠습니다.\n\n다만 유후는 유후 서비스에 접속 또는 이용과정에서 발생하는 개인적인 손해, 제3자가 불법적으로 유후의 서버에 접속하거나 서버를 이용함으로써 발생하는 손해, 제3자가 유후 서버에 대한 전송 또는 유후 서버로부터의 전송을 방해함으로써 발생하는 손해, 제3자가 악성 프로그램을 전송 또는 유포함으로써 발생하는 손해, 전송된 데이터의 생략, 누락, 파괴 등으로 발생한 손해, 명예훼손 등 유후의 과실 없이 제3자가 유후 서비스를 이용하는 과정에서 여러분에게 발생시킨 손해에 대하여 책임을 부담하지 않습니다. 또한 유후는 법률상 허용되는 한도 내에서 간접 손해, 특별 손해, 결과적 손해, 징계적 손해, 및 징벌적 손해에 대한 책임을 부담하지 않습니다.\n\n약관을 수정할 수도 있습니다.\n\n유후은 법률이나 유후 서비스의 변경사항을 반영하기 위한 목적 등으로 본 약관이나 각 유후 서비스 Q&amp;A 센터의 유후 서비스 이용방법, 해당 안내 및 고지사항을 수정할 수 있습니다. 본 약관이 변경되는 경우 유후은 변경 사항을 개별 유후 서비스 초기화면에 게시하며, 변경된 약관은 게시한 날로부터 15 일 후부터 효력이 발생합니다.\n\n유후는 변경된 약관을 게시한 날로부터 효력이 발생되는 날까지 약관변경에 대한 여러분의 의견을 기다리겠습니다. 위 기간이 지나도록 여러분의 의견이 유후에 접수되지 않으면, 여러분이 변경된 약관에 따라 서비스를 이용하는 데에 동의하는 것으로 보겠습니다. 유후로서는 매우 안타까운 일이지만, 여러분이 변경된 약관에 동의하지 않는 경우 변경된 약관의 적용을 받는 해당 서비스의 제공이 더 이상 불가능하게 됩니다.\n\n\n마지막으로…\n\n유후는 여러분과의 의견 교환을 소중하게 생각합니다. 여러분은 언제든지 유후 고객센터 메일로 의견을 개진할 수 있습니다. 유후는 유후로 보내온 이메일 주소로 답변을 발송하는 방법 으로 회원에게 여러 가지 소식을 알려드리며, 회원 전체에 대한 통지는 7일 이상 유후 서비스 초기화면 또는 공지사항란에 게시함으로써 효력이 발생합니다.\n\n본 약관은 유후와 여러분과의 관계에 적용되며, 제3자의 수익권을 발생시키지 않습니다.\n\n여러분이 본 약관을 준수하지 않은 경우에, 유후가 즉시 조치를 취하지 않더라도 유후가 가지고 있는 권리를 포기하는 것이 아니며, 본 약관 중 일부 조항의 집행이 불가능하게 되더라도 다른 조항에는 영향을 미치지 않습니다.\n\n본 약관 또는 유후 서비스와 관련하여서는 대한민국의 법률이 적용됩니다.\n\n공고일자 : 2016년 12월 01일\n시행일자 : 2016년 12월 01일\n유후 서비스 관련 문의사항이 있으시면 언제든지 유후 고객 센터 youwhomessenger@gmail.com으로 메일 주시길 바랍니다.</string>
</resources>