<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/guideImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY" />


    <LinearLayout
        android:id="@+id/layoutGuideText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llCloseGuide"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_mint"
            android:clickable="true"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:text="@string/btn_close_guide"
                android:textColor="@color/colorWhite"
                android:textSize="23dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/arrow_right" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvServiceAgree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:textSize="11sp"
            android:padding="10dp"
            android:text="@string/splash_agree" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCheckGuide"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/select_nor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/check_guide"
                android:textColor="@color/colorMint"
                android:textSize="13sp"
                android:gravity="center"
                android:padding="10dp"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>