<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_service_use_agree"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:orientation="vertical"
    tools:context="world.picpic.www.bbac.ServiceUseAgreeActivity">

    <RelativeLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorMint"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerInside"
            android:padding="14dp"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow_left"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/title_blocked_msg_list"
            android:textColor="@color/colorWhite"
            android:textSize="18dp"
            android:textStyle="bold" />

    </RelativeLayout>


    <ListView
        android:id="@+id/msgList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:dividerHeight="0dp"
        android:divider="@android:color/transparent"
        android:groupIndicator="@null"/>

    <LinearLayout
        android:id="@+id/emptyMsgList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_top_white_background"
        android:gravity="center_horizontal|top"
        android:paddingTop="150dp"
        android:orientation="vertical"
        android:visibility="gone">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEmpty1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/contents_blocked_msg_list_empty1"
                android:textColor="@color/colorDimmedBlack"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEmpty2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/contents_blocked_msg_list_empty2"
                android:textColor="@color/colorDimmedBlack"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>



    </LinearLayout>

</LinearLayout>
